[project]
name = "tk-comfyui-see-through"
description = "A fork of ComfyUI-See-through by @jtydhr88, adding a custom node with the option to skip the head detail inference stage for faster processing."
version = "1.0.0"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.25.0",
    "accelerate>=0.20.0",
    "opencv-python>=4.0.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Repository = "https://github.com/tackcrypto1031/tk_seethrough"

[tool.comfy]
PublisherId = "tackcrypto1031"
DisplayName = "tackbear"
Icon = ""
